finished user list page

--- a/front-end/profile.html
+++ b/front-end/profile.html
@@ -7,7 +7,7 @@
 	<script src="js/config.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<!-- <link rel="stylesheet" type="text/css" href="css/signin.css"> -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">	
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">	
   </head>
 
   <body>
@@ -23,11 +23,14 @@
 		
 		<br>
 		<div>
-			<label>Email <span>(Username)</span></label>
+			<label>Email</label>
 		</div>
 		<div>
 			<label id="email_value"></label>
 		</div>
+		<div>
+				<label id="role"></label>
+			</div>
 		<img class="img-rounded" id="avatar">
     </div>
 
@@ -74,6 +77,8 @@
                 .done( (data) => {
 					$('#avatar').attr("src", data.AvatarUrl);
 					$('#email_value').html(data.Email);
+					$('#role').html(data.Role);
+					
                     console.log(data);
                 })
                 // Ajaxリクエストが失敗した時発動
