--- a/front-end/login.html
+++ b/front-end/login.html
@@ -70,7 +70,7 @@
 			
 			//Go to profile page
 			document.cookie = "token=accessToken";
-			window.location.href = "profile.html";
+			window.location.href = "UploadImage.html";
 			
         },
 
