--- a/front-end/UploadImage.html
+++ b/front-end/UploadImage.html
@@ -4,15 +4,9 @@
     <script src="https://sdk.amazonaws.com/js/aws-sdk-2.283.1.min.js"></script>
     <script src="js/amazon-cognito-identity.min.js"></script>  
     <script src="js/config.js"></script>
-    <script>
-    //    function getHtml(template) {
-    //       return template.join('\n');
-    //    }
-    //    listAlbums();
-    </script>
   </head>
   <body>
-    <h1>My Photo Albums App</h1>
+    <h1>My Upload Photo App</h1>
     <div id="app"></div>
     <input id="photoupload" type="file" accept="image/*">
       <button id="addphoto" onclick="addPhoto()">
