--- a/front-end/user-list.html
+++ b/front-end/user-list.html
@@ -17,31 +17,32 @@
 <script src="js/config.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <style type="text/css">
-    .table-responsive .tabulator-row table{
-    vertical-align: middle;
-    border-collapse:collapse;
-    }
+    img {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
 
-    .table-responsive .tabulator-row table img{
-        border:2px solid #ccc;
-    }
-
-    .table-responsive .tabulator-row table tr td{
-        border:none;
-    }
-
-    .table-responsive .tabulator-row table tr td:first-of-type{
-        width:60px;
-    }
-
-    .table-responsive .tabulator-row table tr td div{
-        padding:5px;
-    }
 </style>
 </head>
 <body>
     <h2>User List</h2>
     <div class="table-responsive">
+            <table class="table" id="tblUser">
+                    <thead>
+                      <tr>
+                        <th>UserID</th>
+                        <th>Email</th>
+                        <th>Role</th>
+                        <th>Avatar</th>
+                        <th>Action</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      
+                    </tbody>
+                  </table>   
     </div>    
     <script>
 	var data = { 
@@ -85,16 +86,21 @@
                 // Ajaxリクエストが成功した時発動
                 .done( (data) => {
                     console.log(data);
-                    var table = new Tabulator(".table-responsive", {
-                    layout:"fitColumns",
-                    data:data, //set initial table data
-                    columns:[
-                        {title:"Name", field:"UserID"},
-                        {title:"Mail", field:"Email"},
-                        {title:"Role", field:"Role"},
-                        {title:"Avatar", field:"AvatarUrl"},
-                    ],
-                });
+                    // var table = new Tabulator(".table-responsive", {
+                    // layout:"fitColumns",
+                    // data:data, //set initial table data
+                    // columns:[
+                    //     {title:"Name", field:"UserID"},
+                    //     {title:"Mail", field:"Email"},
+                    //     {title:"Role", field:"Role"},
+                    //     {title:"Avatar", field:"AvatarUrl"},
+                    // ],
+                // });
+                    $.each(data, function(i, obj){
+                        var newRowContent = "<tr><td>"+obj.UserID+"</td><td>"+obj.Email+"</td><td>"+obj.Role+"</td><td><img src="+obj.AvatarUrl+"></td><td><button type=\"button\" class=\"btn btn-danger\" onclick=\"deleteUser()\">Delete</button></td></tr>";
+                        $("#tblUser tbody").append(newRowContent);  
+
+                    })
                 })
                 // Ajaxリクエストが失敗した時発動
                 .fail( (data) => {
