Added upload profile when regist user

--- a/front-end/UploadImage.html
+++ b/front-end/UploadImage.html
@@ -14,7 +14,7 @@
       </button>
   </body>
   <script>
-    
+    // Cần tạo 
     var bucketName = _config.s3.BUCKET_NAME;
     var bucketRegion = _config.s3.REGION;
     var IdentityPoolId = _config.s3.IDENTITY_POOL_ID;
