--- a/front-end/signout.html
+++ b/front-end/signout.html
@@ -4,8 +4,13 @@
  
   <body class="text-center">
  <h1>You have been signed out<h1>
+  <button type="button" class="button" onclick="move()">move to  login page</button>
   </body>
-  
+  <script>
+  function move(){
+    window.location.replace("login.html");
+  }
+  </script>
 </html>
 
 
